--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:600,700" rel="stylesheet">
     <title>A simple calculator</title>
 </head>
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
